fixed sidebar button alignment

--- a/src/styles/flex.css
+++ b/src/styles/flex.css
@@ -50,7 +50,7 @@
 }
 
 .g-double {
-  gap: 12px;
+  gap: 24px;
 }
 
 .g-quadruple {
